# coldbrew

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  performance-plan.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cli-docs.yml  release.yml
bench/: README.md  binaries.txt  formulas.txt  run.sh
bench/reports/: 20260129-204348.md
docs/: core-principles-homebrew.md  crew-commands.md  crew.1  parallel-pipeline.md
docs/design/: core-principles-homebrew.md  parallel-pipeline.md  zerobrew-performance.md
docs/man/: crew.1
docs/testing/: mvp-e2e-plan.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: cache.rs  clean.rs  default.rs  dependents.rs  deps.rs  doctor.rs  gc.rs  info.rs  init.rs  install.rs  link.rs  list.rs  lock.rs  migrate.rs  mod.rs  pin.rs  search.rs  shell.rs  space.rs  spec.rs  tap.rs  uninstall.rs  update.rs  upgrade.rs  which.rs
src/config/: global.rs  lockfile.rs  mod.rs  project.rs  version_files.rs
src/core/: bottle.rs  dependency.rs  formula.rs  mod.rs  package.rs  platform.rs  version.rs
src/ops/: cleanup.rs  install.rs  link.rs  migrate.rs  mod.rs  relocate.rs  uninstall.rs  upgrade.rs  verify.rs
src/registry/: ghcr.rs  homebrew_api.rs  index.rs  mod.rs  tap.rs
src/storage/: cache.rs  cellar.rs  db.rs  mod.rs  paths.rs  shim.rs  store.rs
tests/: cli_install.rs  lockfile_install.rs  migrate.rs
tests/integration/: mod.rs
